--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "express": "3.1.1",
         "lodash": "4.14.0",
         "mkdirp": "0.3.3",
-        "next": "11.0.1"
+        "next": "11.0.1",
+        "underscore": "^1.8.3"
     }
 }
